--- a/thank-you.html
+++ b/thank-you.html
@@ -7,5 +7,6 @@
 <h1>Thanks for your feedback!</h1>
 <p>We appreciate that you took the time to send us feedback. Your feedback has been sent to the webmaster.</p>
 <p><a href="feedback_form.html">Back to feedback form</a>.</p>
+<!--Check Check -->
 </body>
 </html>
